--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <td>2013-2020</td>
             </tr>
             <tr>
-              <td>LLC "Anet"</td>
+              <td>"Anet" LLC</td>
               <td>System Administrator</td>
               <td>2012-2013</td>
             </tr>
